# anomaly-detection-and-monitoring

./: .gitignore  LICENSE  README.md  appveyor.yml
docs/: anomaly-detection-algorithm.docx
src/: CMakeLists.txt
src/CVE-2016-7255 v2/: CVE-2016-7255 v2.sln
src/CVE-2016-7255 v2/CVE-2016-7255 v2/: CVE-2016-7255 v2.cpp  CVE-2016-7255 v2.vcxproj  CVE-2016-7255 v2.vcxproj.filters  stdafx.cpp
src/CVE-2016-7255/CVE-2016-7255/: CVE-2016-7255.cpp  CVE-2016-7255.vcxproj
src/client/: CMakeLists.txt  client.cpp  client.h  client.pro  klog.cpp  klog.h  main.cpp  mousehook.cpp  mousehook.h  sniffer.cpp  sniffer.h
src/images/: images.qrc
src/includes/: CMakeLists.txt  config.cpp  config.h  data.cpp  data.h  enums.h  fileclient.cpp  fileclient.h  files.h  fileserver.cpp  fileserver.h  klog.cpp  klog.h  mousehook.cpp  mousehook.h  mousehookWinApi.cpp  mousehookWinApi.h  sniffer.cpp  sniffer.h  user.cpp  user.h
src/server/: CMakeLists.txt  filedialog.cpp  filedialog.h  filedialog.ui  main.cpp  server.cpp  server.h  server.pro  server.ui  user.cpp  user.h
